# network_vista

./: .gitignore  LICENSE  README.md  cluster_controller.py  docker_helper.py  md_to_html.py  print_log.py  pyproject.toml  requirements.txt  setup.py  setup.sh
api/: api_ping_test.py  args.py  device_example.yml  login_api.py  query_table.py  upload_devices.py
static_device_example/: uploadDevice.csv
user_guide/importDevices/: import_devices.md
user_guide/infraSetup/: infraSetup.md
user_guide/scheduler/: scheduler.md
user_guide/settings/: settings.md
user_guides/: dashboard.md  readme.html  readme.md
user_guides/completeStaticUserRegistration/: completeStaticUserRegistration.html  completeStaticUserRegistration.md
user_guides/complianceAudit/: cfgAudit.html  cfgAudit.md
user_guides/dashboard/: dashboard.html  dashboard.md
user_guides/importDevices/: importDevices.html  importDevices.md
user_guides/infraCfgDb/: infraCfgDb.html  infraCfgDb.md
user_guides/infraSetup/: infraSetup.html  infraSetup.md
user_guides/scheduler/: scheduler.html  scheduler.md
user_guides/settings/: settings.html  settings.md
user_guides/systemTables/: systemTables.html  systemTables.md
user_guides/tableAudit/: tableAudits.html  tableAudits.md
user_guides/tableDiffs/: tableDiff.html  tableDiff.md
user_guides/tables/: table.html  table.md
